# libbootloader

./: .gitignore  .gitmodules  CMakeLists.txt  freyja.proto
bootloader/: bootloader.cmake
bootloader/include/: Bootloader.hpp  IBootloader.hpp
bootloader/source/: Bootloader.cpp
common/: common.cmake  loadertypes.h
common/include/: DeviceInfo.hpp  IReaderWriter.hpp  ISendReceive.hpp  Serializer.hpp  Version.hpp  loadertypes.h  protocol.h
common/source/: Serializer.cpp  Version.cpp
programmer/: programmer.cmake
programmer/include/: Application.hpp  IProgrammer.hpp  Programmer.hpp
programmer/source/: Application.cpp  Programmer.cpp
test/: test.cmake
test/include/: MockSendReceive.hpp
test/source/: Integration.cpp  ProgrammerTest.cpp  ProtobufTest.cpp  main.cpp
